@@ -9,6 +9,7 @@
     * select_lists
     * links
     * checkboxes
+    * radio_buttons
   * Added ability to register and use custom elements based on standard elements (William Powell)
   * Added generated method to return text for a table
   * Added generated method to return text for an unordered list
